# alewrap

./: CMakeLists.txt  alewrap-0-0.rockspec  rlewrap-1-0.rockspec
alewrap/: AleEnv.lua  AtariLayer.lua  CMakeLists.txt  CMakeLists.txt~  GameEnvironment.lua  aleffi.lua  alewrap.cc  alewrap.h  alewrap.h~  alewrap.inl
rlewrap/: CMakeLists.txt  GameEnvironment.lua  GameLayer.lua  GameScreen.lua  RleEnv.lua  init.lua  rleffi.lua  rlewrap.cc  rlewrap.h  rlewrap.inl
util/: alewrap-0-0.rockspec
util/alewrap/: CMakeLists.txt  alewrap.h
